[tool.poetry]
name = "hh"
version = "1.0.0"
description = ""
authors = ["shyn_le <highlandetspirou2812@gmail.com>"]
readme = "README.md"
packages = [
    { include = "hh" },
    { include = "analytics" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^7.4.2"
dask = "^2023.9.3"
distributed = "^2023.9.3"
aiosqlite = "^0.19.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pandas = "^2.1.1"
apscheduler = "^3.10.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
